style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body{
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'roboto', sans-serif;
    background: rgb(247, 218, 55);
    perspective: 1000px;
}

.card {
    width: 300px;
    height: 450px;
    position: relative;
    transform-style: preserve-3d;
    transition: 1s;
}

.card:hover {
    transform: rotateY(180deg);
}

.card:hover .cd-body .grid {
    transition-delay: 1s;
    width: 200%;
}

.card:hover .cd-body .grid:nth-child(2){
    transition-delay: 1.5s;
}

.card:hover .cd-body .grid:nth-child(3){
    transition-delay: 2s;
}


.cd-body {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, -40px) rotateY(180deg);
    width: 85%;
    height: 87%;
    border-radius: 20px;
    overflow: hidden;
    border: 5px solid rgb(116, 243, 78);
}

.cd-body .grid {
    position: absolute;
    border-radius: 100px;
    background: #fff;
    width: 0;
    transition: 0.5s;

}


.cd-image {
    background: url(https://images.pexels.com/photos/4571251/pexels-photo-4571251.jpeg);
    position: relative;
    width: 100%;
    height: 100%;
    background-size: cover;
    border-radius: 20px;
    transform: translateZ(40px);
}


.cd-body .grid:nth-child(1){
    height: 25%;
    transform-origin: left;
    top: 0;
    left: -30%;
    transform: rotate(-10deg);
}

.cd-body .grid:nth-child(2){
    height: 50%;
    transform-origin: right;
    top: 5%;
    right: -30%;
    transform: rotate(-10deg);
}

.cd-body .grid:nth-child(3){
    height: 50%;
    transform-origin: left;
    top: 70%;
    left: -30%;
    transform: rotate(-10deg);
}

.inside-content {
    position: relative;
    opacity: 0;
    transition: .5s;
    padding: 40px 10px;
    text-align: center;

}

.title {
    font-size: 60px;
    margin-bottom: 20px;
    color: #fff;
    text-transform: uppercase;
}

p.info {
    text-transform: capitalize;
    font-size: 15px;
}

.card:hover .inside-content {
    opacity: 1;
    transition-delay: 2.5s;
}

